<resources>
    <string name="app_name">Formax</string>
    <string name="option_home">Menu Principal </string>
    <string name="option_register">Registrar Dispositivo </string>
    <string name="option_settings">Opciones </string>
    <string name="option_ubicheck">Ubicheck </string>
    <string name="option_similarity">Biometrico no coincide </string>
    <string name="option_information">Informacion </string>
    <string name="option_select_biometric">Empleados </string>
    <string name="information_message">Somos una herramienta enfocada a la elaboración de formas,
        recolección de datos y el control de asistencia;
        con el objetivo de proporcionar información en tiempo real de manera confiable y segura.</string>
    <string name="contactanos"> Contactanos:  01 (55) 56 11 18 30 Opc. 1 \n \n soportecliente@timetracker.com.mx </string>
    <string name="register_device_name">Nombre: </string>
    <string name="register_device_code">Codigo: </string>
    <string name="register_device_biometric">Capturar Biometrico</string>
    <string name="select_device_biometric">Seleccionar Biometrico</string>
    <string name="register_device_reset">Eliminar Datos</string>
    <string name="register_device_terms">Acepto los <a href="https://formax.mx/Home/License">Terminos y Condiciones</a></string>
    <string name="option_select_survey">Seleccionar Forma </string>
    <string name="option_select_branch">Seleccionar Sucursal </string>
    <string name="option_add_branch">Agregar Sucursal </string>
    <string name="option_refresh">Refrescar</string>
    <string name="action_settings">Opciones</string>
    <string name="hello_world">Registrar Dispositivo</string>
    <string name="username">Nombre:</string>
    <string name="password">Codigo:</string>
    <string name="Login">Registrar</string>
    <string name="attempts">Intentos restantes:</string>
    <string name="Empty"></string>
    <string name="Register">Registrar Dispositivo</string>
    <string name="Checkin">Enviar Posicion</string>
    <string name="VacationRequest">Solicitud de Vacaciones</string>
    <string name="BranchInformation">Informacion de local</string>
    <string name="CheckStatus">Revisar Estatus</string>
    <string name="title_activity_home">Time Tracker</string>
    <string name="check_conectivity">Check Conectivity</string>
    <string name="Select_Survey">Seleccione Forma</string>
    <string name="home_upload_answers">Subir Resultados</string>
    <string name="home_download_survey">Actualizar Formas</string>
    <string name="home_select_survey">Seleccionar Forma</string>
    <string name="Surveys">Iniciar Forma</string>
    <string name="Close">Cerrar</string>
    <string name="Test">Enviar Reporte</string>
    <string name="CheckOut">Checar Salida</string>
    <string name="ActivityCheckIn">Iniciar Actividad</string>
    <string name="ActivityCheckOut">Cerrar Actividad</string>
    <string name="ActivitySelection">Seleccionar Actividad</string>
    <string name="download_text">Press the button to download music</string>
    <string name="logout">Cerrar sesión</string>
    <string name="title_activity_welcome">Sistema de Encuestas</string>
    <string name="exit">Exit without logout</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="Next">Siguiente</string>
    <string name="Sections">Secciones</string>
    <string name="Null">SUPERVISION DE PROMOTOR SECOS</string>
    <string name="Loading">Cargando....</string>
    <string name="title_activity_preview">PreviewActivity</string>
    <string name="title_activity_signature">SignatureActivity</string>
    <string name="Cancel">Cancelar</string>
    <string name="Clear">Limpiar</string>
    <string name="Save">Guardar</string>
    <string name="Signature">Por favor ingrese su firma..</string>
    <string name="Back">Regresar</string>
    <string name="title_activity_select_survey">Seleccione una forma</string>
    <string name="title_activity_start_survey">StartSurvey</string>
    <string name="StartSurvey">Iniciar Forma</string>
    <string name="title_activity_seekbar_with_intervals">SeekbarWithIntervals</string>
    <string name="title_activity_register">Registrar Dispositivo</string>
    <string name="title_activity_splash_screen">Formax</string>
    <string name="title_activity_information">Informacion</string>
    <string name="title_activity_settings">Opciones</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_ubicheck_new">UbicheckNewActivity</string>
    <string name="ubicheck_new_button_search">Buscar Cliente</string>
    <string name="ubicheck_new_button_save">Guardar Sucursal</string>
    <string name="ubicheck_new_field_Client">Cliente</string>
    <string name="ubicheck_new_field_Name">Sucursal</string>
    <string name="ubicheck_new_field_ChainNumber">No. Cadena</string>
    <string name="ubicheck_new_field_DistributionChannel">Canal Dist.</string>
    <string name="ubicheck_new_field_Address1">Direccion 1</string>
    <string name="ubicheck_new_field_Address2">Dreccion 2</string>
    <string name="ubicheck_new_field_ExteriorNumber">No. Exterior</string>
    <string name="ubicheck_new_field_City">Ciudad</string>
    <string name="ubicheck_new_field_State">Estado</string>
    <string name="ubicheck_new_field_ZIP">Codigo Postal</string>
    <string name="ubicheck_new_field_Country">Pais</string>
    <string name="ubicheck_new_field_Schedule">Horario</string>
    <string name="ubicheck_new_field_Phone">Telefono</string>
    <string name="ubicheck_new_field_Website">Pagina Web</string>
    <string name="ubicheck_new_field_Latitude">Latitud</string>
    <string name="ubicheck_new_field_Longitude">Longitud</string>
    <string name="title_activity_select_biometric">SelectBiometricActivity</string>
    <string name="select_biometric_field_name">Nombre</string>
    <string name="select_biometric_button_search">Buscar Empleado</string>
    <string name="select_biometric_buttons_header">Seleccionar Empleado </string>
    <string name="dataStatus">Uso de datos</string>
    <string name="BusquedaSucursal">Buscando Sucursal</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
