<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/linearLayout1"
    android:layout_width="match_parent" android:layout_height="400dp"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_height="wrap_content"
        android:id="@+id/linearLayout2" android:layout_width="match_parent">
        <Button android:layout_height="wrap_content" 
            android:layout_weight=".30"
            android:text="@string/Cancel" 
            android:layout_width="wrap_content"
               style="@style/button_text"
      android:background="@drawable/red_button" 
             android:id="@+id/cancel" />
        <Button android:layout_height="wrap_content" 
            android:layout_weight=".35"
            android:text="@string/Clear"
            android:layout_width="wrap_content" 
             style="@style/button_text"
      android:background="@drawable/green_button" 
            android:id="@+id/clear" />
        <Button android:layout_height="wrap_content" 
            android:layout_weight=".35"
            android:text="@string/Save" 
            android:layout_width="wrap_content" 
             style="@style/button_text"
      android:background="@drawable/green_button" 
            android:id="@+id/getsign" />
    </LinearLayout>
    <TableLayout android:layout_height="wrap_content"
        android:id="@+id/tableLayout1" android:layout_width="match_parent">
        <TableRow android:id="@+id/tableRow3" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView android:layout_height="wrap_content" android:id="@+id/lblDeviceCode"
                android:text="" android:maxLength="30"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content" />
            <TextView android:layout_height="wrap_content" android:id="@+id/textView4"
                android:text="@string/Signature" android:maxLength="30"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content" />
        </TableRow>
    </TableLayout>
    <LinearLayout android:layout_height="match_parent"
        android:id="@+id/linearLayout" android:layout_width="match_parent" android:orientation="vertical" />
</LinearLayout>
